--- a/client/css/overlays/welcome.css
+++ b/client/css/overlays/welcome.css
@@ -157,6 +157,23 @@
 .mainStateImage .active.star, .mainStateImage .active.star + span {
   color: gold;
 }
+.mainStateImage .star-count {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+.mainStateImage .star-count .star {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+.mainStateImage .star-count span {
+  padding: 0 4px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
 .mainStateImage span:not(.ai-badge) {
   position: absolute;
   top: calc(var(--starOffset) + 100% * var(--starSize));
